# lmcv_tools

./: .gitignore  README.md  mano.py  pyproject.toml
.github/workflows/: python-publish.yml
docs/: To Do.md
docs/notebooks/: Geometry - Isometric Projection.ipynb  Geometry - NURBS.ipynb  Optimization - Nodal Reordering.ipynb  Optimization - Virtual Laminas Distribution.ipynb
ftrans/interface/: core.py  messenger.py  translator.py
ftrans/models/: section.py
lmcv_tools/: __main__.py
lmcv_tools/commands/: change.py  extract.py  generate.py  help.py  reorder.py  translate.py
lmcv_tools/controllers/: translator.py
lmcv_tools/databases/: element_relations.json  extraction_attributes.json  help_messages.json  translation_reference.json
lmcv_tools/interface/: core.py  filer.py  messenger.py  searcher.py
lmcv_tools/models/: ansi_style.py  artifacts.py  custom_errors.py  element.py  entity.py  extraction_components.py  generation_artifacts.py  geometry.py  graphical_interfaces.py  graphics.py  interpreters.py  math.py  node.py  simulation.py  translation_components.py  translation_entities.py
src/: __main__.py  main.py
src/databases/: element_relations.json
src/interface/: core.py  searcher.py  translator.py
src/models/: element.py  node.py  section.py
tests/: test_3D_forms.py  test_change.py  test_cubic_forms.py  test_extract.py  test_generate.py  test_parts.py  test_reorder.py  test_translate.py  test_translation.py
tests/benchmark/: ComplexPart_C3D20R.inp  Cube_1x1.rpt  Cube_C3D20_1x1x1.inp  Cube_C3D20_1x1x1.rpt  Cube_C3D20_2x2x2.inp  (+8 more)
(+96 files in other folders)
